0.13.1:
	* Translations have become possible. See locales/en.sh and pkg++’
	  source code for more information. Documentation may still come
	  later.

0.13:
	* The splits system has been updated and the new one has been
	  implemented.
	* Several minor internal modifications to clean the code.

0.12:
	* -lt,-gt,-le,-ge,-eq,-ne are now supported by vercmp() (and so by @{
	  }@). In more, -sb has been added, which is equivalent to ~>.
	* Problems of directories path in includes/cmake have been resolved.
	* Several minor documentation updates have been performed.
	* The experimental dependencies check is not run anymore when pkg++
	  does not plan to build a package.
	* The script-generated Makefile now creates the
	  /var/cache/pkg++/sources and /var/cache/pkg++/packages directories,
	  so that pkg++ is directly usable after a fresh installation.
	* Mint, SuSE and openSUSE have both been added to the list of 
	  distribution-specific variables of /etc/pkg++/defaults/distributions
	  (see distributions.zsh).
	* wget:cat() (and so wcat in most cases) were broken, but have been
	  repaired.
	* The non-tar archive types are working again (that is, all unpack
	  modules).
	* includes/python has been updated and now supports the `$python`
	  variable to tell in a recipe which Python interpreter to use.

0.11.6:
	* info(), warning() and error() updated to display all options given.
	* subinfo() added to print messages from inside recipe-defined
	  functions (build(), check(), etc.) and from modules at usefull times
	  (check_depends(), build(), etc.).
	* PKGMK_RPM_IGNORE_DISTEPOCH added to help avoid problems with the 
	  "distepoch" and "disttag" variables of some distributions of RPM.
	* Gentoo added to the list of known distributions.

0.11.5:
	* Revision numbers are available with Mercurial (hg) repositories.
	* ${supports[]} now uses a USE-like syntax.
	* defaults/prefixes becomes post-defaults/prefixes.zsh
	* @{ does not use die() anymore.